# bash-extensions

./: .bashrc  LICENSE  Makefile.am  README.rst  configure.ac
completions.d/: cd  vault
ps1.d/: background_jobs  classic  git_branch  git_dirtyness  return_code
sources.d/: aliases  cd  colors  exit  git  log  paths  pipe  ps1
