# SPDX-License-Identifier: MIT
#
# author: ypsah <asyph@tutanota.com>

XDG_DATA_HOME ?= $(HOME)/.local/share

bashrcdir = $(HOME)
bashrc_DATA = .bashrc

extensionsdir = $(XDG_DATA_HOME)/bash/sources.d
extensions_DATA = sources.d/aliases sources.d/cd sources.d/colors \
				  sources.d/git sources.d/paths sources.d/ps1

ps1dir = $(XDG_DATA_HOME)/bash/ps1.d
ps1_DATA = ps1.d/background_jobs ps1.d/classic ps1.d/git_branch \
		   ps1.d/git_dirtyness ps1.d/return_code

completionsdir = $(XDG_DATA_HOME)/bash/completions.d
completions_DATA = completions.d/cd completions.d/vault
